@@ -1,3 +1,12 @@
+2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* SConstruct (symlink): 
+	* GNUmakefile.in (link-tree): Add scripts to prefix.
+
+	* lily/general-scheme.cc (ly:effective-prefix): New function.
+
+	* scm/backend-library.scm (postscript->png): Use it.
+
 2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/part-combiner.scm (determine-split-list): switch off
